[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]

script = ExtResource( 1 )
Enemy = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

[node name="enemyTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="announcementLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="grab" from="Player" to="." method="_on_Player_grab"]

[connection signal="throw" from="Player" to="." method="_on_Player_throw"]

[connection signal="timeout" from="enemyTimer" to="." method="_on_enemyTimer_timeout"]


